--- a/index.html
+++ b/index.html
@@ -1,64 +1,59 @@
 html
 Copy code
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hesbon Angwenyi - Software Engineer</title>
-    <link rel="stylesheet" href="styles.css">
+  <title>Hesbon M. Angwenyi - Software Developer</title>
+  <style>
+    body {
+      background-image: url('https://d41chssnpqdne.cloudfront.net/user_upload_by_module/chat_bot/files/19232216/QBKtdciowFulOWAl?Expires=1719656039&Signature=NxjL0VBs1vcq-GpbPcdjTEx1WFqv4JSwYOWULOEkLABdyaKlPlJVhEVJhscmPM~42nlul1iooSxjjer8MawIACsksn5rhx9nOmhUGhyHRO-jAm8kEcFseRgNI-59kR9kbGRApsdcmeuk4ix6lu6RhwHTSjyqnvZBylwSYMZ36xXEHWWdmvDzG~LBZT7dAcs5YrE~TthUMSPVFL6OY4ZLhl5S3tVploerg6LacErvdY3kcLxnWV4axqqJgCvOL7A5rAyBtSsNWcAAr~AY~QM9He89GPEjvsV8Kw9uk2DyhRsIo--gmkxjofMiNkKsS5YGZC4n0mXpbB4NlF-hlrIjwQ__&Key-Pair-Id=K3USGZIKWMDCSX');
+      background-size: auto 50%; /* Cut the image vertically in the middle */
+      background-position: center;
+      font-family: Arial, sans-serif;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1, h2 {
+      text-align: center;
+    }
+
+    img {
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+      border-radius: 8px;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="profile-container">
-        <header>
-            <h1>Hesbon Angwenyi</h1>
-            <p>Software Engineer | Fresh Graduate from Moringa School</p>
-        </header>
-        <section class="contact-info">
-            <h2>Contact Information</h2>
-            <p><strong>Email:</strong> <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a></p>
-            <p><strong>Phone:</strong> +254743573380</p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">Hesbon Angwenyi</a></p>
-        </section>
-        <section class="professional-summary">
-            <h2>Professional Summary</h2>
-            <p>I am a dedicated and innovative Software Engineer with a strong foundation in software development, recently graduated from Moringa School. I have a passion for developing scalable and efficient software solutions, and I am eager to apply my skills in real-world projects. My education and hands-on experience have equipped me with a solid understanding of programming languages, software development methodologies, and modern tech stacks.</p>
-        </section>
-        <section class="education">
-            <h2>Education</h2>
-            <p><strong>Moringa School</strong><br>
-            <em>Program:</em> Software Engineering<br>
-            <em>Year of Graduation:</em> 2022</p>
-            <p>Comprehensive training in full-stack development, including front-end and back-end technologies. Hands-on projects and collaborative learning environment.</p>
-        </section>
-        <section class="technical-skills">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li><strong>Programming Languages:</strong> JavaScript, Python, Java</li>
-                <li><strong>Web Technologies:</strong> HTML, CSS, React, Node.js</li>
-                <li><strong>Databases:</strong> MySQL, MongoDB</li>
-                <li><strong>Version Control:</strong> Git, GitHub</li>
-                <li><strong>Other Tools:</strong> Docker, Kubernetes, Jenkins</li>
-            </ul>
-        </section>
-        <section class="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Event Planner Project</h3>
-                <p><em>Description:</em> Developed a comprehensive event planning application that allows users to create, manage, and share event details. The platform supports user authentication, event scheduling, and RSVP management.</p>
-                <p><em>Technologies Used:</em> JavaScript, React, Node.js, MongoDB</p>
-            </div>
-            <div class="project">
-                <h3>E-commerce Website</h3>
-                <p><em>Description:</em> Built an e-commerce website with features including product listings, user reviews, shopping cart functionality, and a secure checkout process. The site is responsive and optimized for a seamless user experience.</p>
-                <p><em>Technologies Used:</em> HTML, CSS, JavaScript, Python, Django</p>
-            </div>
-            <div class="project">
-                <h3>Bank Application Project</h3>
-                <p><em>Description:</em> Created a banking application that offers functionalities such as account management, fund transfers, transaction history, and balance inquiries. Implemented security measures to ensure data protection.</p>
-                <p><em>Technologies Used:</em> HTML, CSS, JavaScript, Python, Flask</p>
-            </div>
-        </section>
-    </div>
+  <div class="container">
+    <h1>Hesbon M. Angwenyi - Software Developer</h1>
+    <img src="https://d41chssnpqdne.cloudfront.net/user_upload_by_module/chat_bot/files/19232216/QBKtdciowFulOWAl?Expires=1719656039&Signature=NxjL0VBs1vcq-GpbPcdjTEx1WFqv4JSwYOWULOEkLABdyaKlPlJVhEVJhscmPM~42nlul1iooSxjjer8MawIACsksn5rhx9nOmhUGhyHRO-jAm8kEcFseRgNI-59kR9kbGRApsdcmeuk4ix6lu6RhwHTSjyqnvZBylwSYMZ36xXEHWWdmvDzG~LBZT7dAcs5YrE~TthUMSPVFL6OY4ZLhl5S3tVploerg6LacErvdY3kcLxnWV4axqqJgCvOL7A5rAyBtSsNWcAAr~AY~QM9He89GPEjvsV8Kw9uk2DyhRsIo--gmkxjofMiNkKsS5YGZC4n0mXpbB4NlF-hlrIjwQ__&Key-Pair-Id=K3USGZIKWMDCSX" alt="A group of people studying">
+  
+    <h2>Introduction</h2>
+    <p>Hello, I'm Hesbon M. Angwenyi, a passionate software engineer dedicated to crafting innovative applications that enhance productivity and user experiences.</p>
+  
+    <h2>Experience</h2>
+    <p>I have recently completed the Software Development Certificate program at Moringa School, gaining hands-on experience in building applications such as a Bank Application, Ecommerce websites, and an event planner.</p>
+  
+    <h2>Contact</h2>
+    <p>You can reach me via email at <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a>, phone at <a href="tel:+254743573380">+254743573380</a>, or connect with me on <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4">LinkedIn</a>. I am enthusiastic about discussing new opportunities and collaborations.</p>
+  </div>
 </body>
 </html>
