--- a/index.html
+++ b/index.html
@@ -1,59 +1,74 @@
 html
 Copy code
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hesbon M. Angwenyi - Software Developer</title>
   <style>
     body {
-      background-image: url('https://d41chssnpqdne.cloudfront.net/user_upload_by_module/chat_bot/files/19232216/QBKtdciowFulOWAl?Expires=1719656039&Signature=NxjL0VBs1vcq-GpbPcdjTEx1WFqv4JSwYOWULOEkLABdyaKlPlJVhEVJhscmPM~42nlul1iooSxjjer8MawIACsksn5rhx9nOmhUGhyHRO-jAm8kEcFseRgNI-59kR9kbGRApsdcmeuk4ix6lu6RhwHTSjyqnvZBylwSYMZ36xXEHWWdmvDzG~LBZT7dAcs5YrE~TthUMSPVFL6OY4ZLhl5S3tVploerg6LacErvdY3kcLxnWV4axqqJgCvOL7A5rAyBtSsNWcAAr~AY~QM9He89GPEjvsV8Kw9uk2DyhRsIo--gmkxjofMiNkKsS5YGZC4n0mXpbB4NlF-hlrIjwQ__&Key-Pair-Id=K3USGZIKWMDCSX');
-      background-size: auto 50%; /* Cut the image vertically in the middle */
-      background-position: center;
       font-family: Arial, sans-serif;
       color: #333;
       margin: 0;
-      padding: 20px;
+      padding: 0;
+      background-image: url('https://d41chssnpqdne.cloudfront.net/user_upload_by_module/chat_bot/files/19232216/QBKtdciowFulOWAl?Expires=1719656039&Signature=NxjL0VBs1vcq-GpbPcdjTEx1WFqv4JSwYOWULOEkLABdyaKlPlJVhEVJhscmPM~42nlul1iooSxjjer8MawIACsksn5rhx9nOmhUGhyHRO-jAm8kEcFseRgNI-59kR9kbGRApsdcmeuk4ix6lu6RhwHTSjyqnvZBylwSYMZ36xXEHWWdmvDzG~LBZT7dAcs5YrE~TthUMSPVFL6OY4ZLhl5S3tVploerg6LacErvdY3kcLxnWV4axqqJgCvOL7A5rAyBtSsNWcAAr~AY~QM9He89GPEjvsV8Kw9uk2DyhRsIo--gmkxjofMiNkKsS5YGZC4n0mXpbB4NlF-hlrIjwQ__&Key-Pair-Id=K3USGZIKWMDCSX');
+      background-size: 50%; /* Adjust the size of the background image */
+      background-position: center;
+      height: 100vh; /* Full height of viewport */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
 
     .container {
-      max-width: 800px;
-      margin: 0 auto;
       background-color: rgba(255, 255, 255, 0.9);
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 800px;
     }
 
     h1, h2 {
-      text-align: center;
+      margin-bottom: 20px;
     }
 
     img {
-      display: block;
-      margin: 0 auto;
       max-width: 100%;
       border-radius: 8px;
     }
 
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
+    footer {
+      margin-top: 20px;
+      padding: 10px;
+      text-align: center;
+      background-color: #f0f0f0;
+      border-top: 1px solid #ccc;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Hesbon M. Angwenyi - Software Developer</h1>
-    <img src="https://d41chssnpqdne.cloudfront.net/user_upload_by_module/chat_bot/files/19232216/QBKtdciowFulOWAl?Expires=1719656039&Signature=NxjL0VBs1vcq-GpbPcdjTEx1WFqv4JSwYOWULOEkLABdyaKlPlJVhEVJhscmPM~42nlul1iooSxjjer8MawIACsksn5rhx9nOmhUGhyHRO-jAm8kEcFseRgNI-59kR9kbGRApsdcmeuk4ix6lu6RhwHTSjyqnvZBylwSYMZ36xXEHWWdmvDzG~LBZT7dAcs5YrE~TthUMSPVFL6OY4ZLhl5S3tVploerg6LacErvdY3kcLxnWV4axqqJgCvOL7A5rAyBtSsNWcAAr~AY~QM9He89GPEjvsV8Kw9uk2DyhRsIo--gmkxjofMiNkKsS5YGZC4n0mXpbB4NlF-hlrIjwQ__&Key-Pair-Id=K3USGZIKWMDCSX" alt="A group of people studying">
   
     <h2>Introduction</h2>
-    <p>Hello, I'm Hesbon M. Angwenyi, a passionate software engineer dedicated to crafting innovative applications that enhance productivity and user experiences.</p>
+    <p>Hello, I'm Hesbon M. Angwenyi, a recent graduate from Moringa School's Software Development Certificate program. I specialize in both backend (Java, Python) and frontend (JavaScript, React) development, with hands-on experience in building applications like a secure Bank Application, user-friendly Ecommerce websites using React, and an efficient event planner. Passionate about leveraging technology to drive business growth and enhance user experiences, I'm eager to contribute my skills to innovative software projects.</p>
   
     <h2>Experience</h2>
-    <p>I have recently completed the Software Development Certificate program at Moringa School, gaining hands-on experience in building applications such as a Bank Application, Ecommerce websites, and an event planner.</p>
+    <p>As a recent graduate from Moringa School's rigorous Software Development Certificate program, I have acquired practical skills in backend and frontend development. During my training, I successfully built and deployed several projects, including a secure Bank Application using Java, a dynamic Ecommerce platform utilizing React and JavaScript, and an intuitive event planner with Python backend integration.
+
+        These experiences have equipped me with hands-on expertise in software development methodologies, database management, and creating scalable solutions. I am adept at collaborating within agile teams to deliver high-quality software that meets client needs and enhances user experiences. My dedication to continuous learning and problem-solving allows me to tackle complex challenges with creativity and precision.</p>
   
     <h2>Contact</h2>
     <p>You can reach me via email at <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a>, phone at <a href="tel:+254743573380">+254743573380</a>, or connect with me on <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4">LinkedIn</a>. I am enthusiastic about discussing new opportunities and collaborations.</p>
   </div>
+
+  <footer>
+    &copy; 2024 Hesbon M. Angwenyi. All rights reserved.
+  </footer>
 </body>
 </html>
