--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-html
-Copy code
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,9 +43,15 @@ Copy code
       text-align: center;
       background-color: #f0f0f0;
       border-top: 1px solid #ccc;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
+    }
+
+    .project-links {
+      margin-top: 20px;
+    }
+
+    .project-links a {
+      display: inline-block;
+      margin-right: 10px;
     }
   </style>
 </head>
@@ -59,9 +63,29 @@ Copy code
     <p>Hello, I'm Hesbon M. Angwenyi, a recent graduate from Moringa School's Software Development Certificate program. I specialize in both backend (Java, Python) and frontend (JavaScript, React) development, with hands-on experience in building applications like a secure Bank Application, user-friendly Ecommerce websites using React, and an efficient event planner. Passionate about leveraging technology to drive business growth and enhance user experiences, I'm eager to contribute my skills to innovative software projects.</p>
   
     <h2>Experience</h2>
-    <p>As a recent graduate from Moringa School's rigorous Software Development Certificate program, I have acquired practical skills in backend and frontend development. During my training, I successfully built and deployed several projects, including a secure Bank Application using Java, a dynamic Ecommerce platform utilizing React and JavaScript, and an intuitive event planner with Python backend integration.
-
-        These experiences have equipped me with hands-on expertise in software development methodologies, database management, and creating scalable solutions. I am adept at collaborating within agile teams to deliver high-quality software that meets client needs and enhances user experiences. My dedication to continuous learning and problem-solving allows me to tackle complex challenges with creativity and precision.</p>
+    <p>As a recent graduate from Moringa School's rigorous Software Development Certificate program, I have acquired practical skills in backend and frontend development. During my training, I successfully built and deployed several projects, including a secure Bank Application using Java, a dynamic Ecommerce platform utilizing React and JavaScript, and an intuitive event planner with Python backend integration. These experiences have equipped me with hands-on expertise in software development methodologies, database management, and creating scalable solutions. I am adept at collaborating within agile teams to deliver high-quality software that meets client needs and enhances user experiences. My dedication to continuous learning and problem-solving allows me to tackle complex challenges with creativity and precision.</p>
+  
+    <h2>Projects</h2>
+    <div class="project-links">
+      <p>Here are links to some of my projects:</p>
+      <ul>
+        <li>
+          <a href="https://github.com/hesbonangwenyi606/project1" target="_blank">Project 1 GitHub Repository</a>
+        </li>
+        <li>
+          <a href="https://www.example.com/project1-demo" target="_blank">Project 1 Live Demo</a>
+        </li>
+        <li>
+          <a href="https://github.com/hesbonangwenyi606/project2" target="_blank">Project 2 GitHub Repository</a>
+        </li>
+        <li>
+          <a href="https://www.example.com/project2-demo" target="_blank">Project 2 Live Demo</a>
+        </li>
+      </ul>
+    </div>
+  
+    <h2>Ecommerce Websites</h2>
+    <p>An ecommerce website serves as an online platform where businesses and consumers can engage in buying and selling products or services over the internet. It enables businesses to showcase their products, manage inventory, process transactions securely, and provide customer support, all through a digital interface. For consumers, an ecommerce site offers convenience, variety, and the ability to shop anytime, anywhere, making it a cornerstone of modern retail and commerce.</p>
   
     <h2>Contact</h2>
     <p>You can reach me via email at <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a>, phone at <a href="tel:+254743573380">+254743573380</a>, or connect with me on <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4">LinkedIn</a>. I am enthusiastic about discussing new opportunities and collaborations.</p>
