--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+html
+Copy code
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +28,8 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       max-width: 800px;
+      margin: auto; /* Center align container */
+      margin-top: 20px; /* Add some space at the top */
     }
 
     h1, h2 {
@@ -49,9 +53,26 @@
       margin-top: 20px;
     }
 
+    .project-links h2 {
+      margin-bottom: 10px;
+    }
+
+    .project-links ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .project-links li {
+      margin-bottom: 10px;
+    }
+
     .project-links a {
-      display: inline-block;
-      margin-right: 10px;
+      color: #007bff; /* Blue color for links */
+      text-decoration: none;
+    }
+
+    .project-links a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -65,27 +86,12 @@
     <h2>Experience</h2>
     <p>As a recent graduate from Moringa School's rigorous Software Development Certificate program, I have acquired practical skills in backend and frontend development. During my training, I successfully built and deployed several projects, including a secure Bank Application using Java, a dynamic Ecommerce platform utilizing React and JavaScript, and an intuitive event planner with Python backend integration. These experiences have equipped me with hands-on expertise in software development methodologies, database management, and creating scalable solutions. I am adept at collaborating within agile teams to deliver high-quality software that meets client needs and enhances user experiences. My dedication to continuous learning and problem-solving allows me to tackle complex challenges with creativity and precision.</p>
   
-    <h2>Projects</h2>
     <div class="project-links">
-      <p>Here are links to some of my projects:</p>
+      <h2>Projects</h2>
       <ul>
-        <li>
-          <a href="https://github.com/hesbonangwenyi606/project1" target="_blank">Project 1 GitHub Repository</a>
-        </li>
-        <li>
-          <a href="https://www.example.com/project1-demo" target="_blank">Project 1 Live Demo</a>
-        </li>
-        <li>
-          <a href="https://github.com/hesbonangwenyi606/project2" target="_blank">Project 2 GitHub Repository</a>
-        </li>
-        <li>
-          <a href="https://www.example.com/project2-demo" target="_blank">Project 2 Live Demo</a>
-        </li>
+        <li>Project 1: <a href="https://github.com/Ndungu-Muigai/ShopSavvyHub-ecommerce-site.git" target="_blank">GitHub Link</a> and <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">Live Demo</a></li>
       </ul>
     </div>
-  
-    <h2>Ecommerce Websites</h2>
-    <p>An ecommerce website serves as an online platform where businesses and consumers can engage in buying and selling products or services over the internet. It enables businesses to showcase their products, manage inventory, process transactions securely, and provide customer support, all through a digital interface. For consumers, an ecommerce site offers convenience, variety, and the ability to shop anytime, anywhere, making it a cornerstone of modern retail and commerce.</p>
   
     <h2>Contact</h2>
     <p>You can reach me via email at <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a>, phone at <a href="tel:+254743573380">+254743573380</a>, or connect with me on <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4">LinkedIn</a>. I am enthusiastic about discussing new opportunities and collaborations.</p>
