--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     img {
       max-width: 100%;
       border-radius: 8px;
+      margin-top: 20px; /* Add some space at the top of the images */
     }
 
     footer {
@@ -89,7 +90,9 @@
       <ul>
         <li>
           <p>The ShopSavvyHub Ecommerce Website is a dynamic and user-friendly platform designed to provide a seamless shopping experience. Built with React for the frontend and powered by a robust Java backend, this project features a responsive design, intuitive navigation, and secure payment integration. Key functionalities include product browsing, a searchable catalog, user authentication, and an efficient checkout process. The website aims to enhance the online shopping experience by offering a reliable and efficient platform for both consumers and vendors.</p>
-          Project 1: <a href="https://github.com/Ndungu-Muigai/ShopSavvyHub-ecommerce-site.git" target="_blank">GitHub Link</a> and <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">Live Demo</a>
+          <img src="Screenshot1.png" alt="Product Page Screenshot">
+          <img src="Screenshot2.png" alt="Product Detail Screenshot">
+          <p>Project 1: <a href="https://github.com/Ndungu-Muigai/ShopSavvyHub-ecommerce-site.git" target="_blank">GitHub Link</a> and <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">Live Demo</a></p>
         </li>
       </ul>
     </div>
